# bobframes

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  HANDOVER.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
bobframes/: _default_config.toml  aggregates.py  catalog.py  cli.py  config.py  derive_post_merge.py  discovery.py  errors.py  global_entities.py  health.py  lint.py  lint_banlist.toml  manifest.py  package.py  parquetize.py  paths.py  qrd_harness.py  query_examples.py  rdcmd.py  resource_labels.py  run.py  schemas.py  serve.py  stable_keys.py
bobframes/derives/: classifier.py  draw_classifier.toml  pass_class_breakdown.py  texture_usage.py
bobframes/derives/presets/: custom-template.toml  godot.toml  unity.toml
bobframes/html/: template.py
bobframes/parsers/: derive_program_transitions.py  parse_init_state.py
bobframes/probes/: whatif.py
bobframes/replay/: __init__.py  replay_main.py
bobframes/reports/: __init__.py  _dashboard.py  _tokens.py  ab.py  base.py  cache.py  charts.py  chrome.py  cli.py  dashboard.py  delta.py  design_tokens.toml  discovery.py  draws_by_class.py  formatters.py  instancing_opportunities.py  orchestrator.py  overdraw.py  pass_gpu.py  preview.py  shader_hotlist.py  summary.py  trend_table.py
bobframes/reports/assets/: README.md  chrome.css  components.css  components.js  container.css  design_tokens.css  icon_sprite.html  link_kind.css  per_drop.css  print.css  rdc_table.css  rdc_table.js  sticky.css
bobframes/tests/: _render_util.py  _ui_util.py  make_golden.py  make_package_golden.py  make_parquet_golden.py  make_preview_golden.py  make_synthetic.py  smoke.py  test_aggregates.py  test_assets.py  test_browser_shots.py  test_cache.py  test_catalog_backup_dedup.py  test_charts.py  test_classifier.py  test_components.py  test_config.py  test_contrast.py  test_delta.py  test_design_tokens.py  test_determinism.py  test_discovery.py  test_draws_by_class_kpis.py  test_element_builder.py  test_fonts.py  test_hardening.py  test_head_assets.py  test_health.py  test_js_coupled_classes.py  test_manifest_guard.py  test_multicapture_normalize.py  test_package.py  test_parity.py  test_parquet_parity.py  test_parquetize.py  test_perf.py  test_replay_drift.py  test_report_polish.py  test_report_structure.py  test_run_model.py  (+28 more)
bobframes/tests/data/golden/: index.html
bobframes/tests/data/golden_parquet/: digests.json
bobframes/tests/data/golden_preview/: _chrome_preview.html
bobframes/ui/: __init__.py  jobs.py  progress.py  server.py
bobframes/ui/assets/: panel.css  panel.js
docs/plan/: ARCHITECTURE.md  BOOTSTRAP.md  CLAUDE_router.md  CLI_PLAN.archive.md  DECISIONS.md  INDEX.md  MIGRATION.md  ROADMAP.md  STATE.md  V02_PLANNING_PROMPT.md  adr36_spa_architecture_proposal.md  overall_overhaul_proposal.md  readability_and_presentation_review.md  report_roadmap.md  v025_packaging_and_onepager_proposal.md
docs/plan/commits/v01/: c01_version.md  c02_golden_harness.md  c03_hardening.md  c11_cli_dispatcher.md  c12_replay_importlib.md  c13_replay_drift_ci.md  c14_rename.md  c15_smoke_tests.md  c17_ci_workflow.md  c18_docs.md  c19_release.md
docs/plan/commits/v02/: c04_paths_constants.md  c05_registry_consolidation.md  c06_tool_resolver.md  c06a_drill_size_dehardcode.md  c06b_parquet_parity_gate.md  c07_toml_config.md  c08_design_tokens.md  c09_classifier.md  c10_env_rename.md  c16_report_quality.md  c16b_report_viz.md  c16c_report_restructure.md  c16d_report_aesthetics.md  c16e_run_model.md  c16f_multirun_ux.md  c16i_catalog_drill_readability.md  c16j_data_decoupling.md  c16j_spa_spine.md  c16k_data_decoupling.md  c16k_unified_table_component.md  c16l_rehome_reports.md  c16l_unified_table_rollout.md  c16m_cell_truncation_hover.md  c16m_single_file_export.md  c16n_catalog_drill_readability_spa.md  c16n_clip_coverage_print.md  c16o_table_a11y_parity.md  c16p_v02_closeout.md
docs/plan/commits/v025/: c16q_health_and_onepager.md  c16r_head_assets_seam.md  c16s_package_verb.md  c16t_shared_assets.md  c16u_redact.md  c16v_multicapture_normalize.md  c16w_v025_closeout.md  c16x_component_system.md  c16y_aggregates_extraction.md
docs/plan/commits/v026/: v026_0_tooling_and_gates.md  v026_1a_token_lift.md  v026_1b_flat_surfaces.md  v026_1c_theme_override.md  v026_2_summary_one_pager.md  v026_3_dashboard_grid.md  v026_4_detail_reports.md  v026_5_catalog_drill_close.md  v026_6_closeout_ship.md  v026_visual_redesign_brief.md
docs/plan/commits/v027/: v027_0_frame_count_sot.md  v027_1_regression_unification.md  v027_2_cross_report_gpu_consistency.md  v027_3_median_total_disclosure.md  v027_4_closeout.md  v027_5_closeout_ship.md
docs/plan/commits/v028/: v028_0_ui_verb_skeleton.md  v028_1_control_page_state_security.md  v028_2_job_runner_sse.md  v028_3_share_explore.md  v028_4_ab_theme_scaffold.md  v028_5_polish_docs_closeout.md  v028_6_panel_fixes_redesign.md  v028_7_js_execution_gate.md  v028_8_externalize_assets.md
docs/plan/commits/v029/: v029_0_cancel_job.md  v029_10_run_col_dedupe.md  v029_11_favicon.md  v029_12_narrow_width.md  v029_13_closeout.md  v029_14_progress_bar.md  v029_15_folder_wording.md  v029_16_progress_bar_all_jobs.md  v029_17_folder_disclosure.md  v029_18_captures_run_caption.md  v029_19_ci_browser_not_gating.md  v029_1_write_config_stub.md  v029_2_root_input.md  v029_3_ingest_estimate.md  v029_4_aria_live.md  v029_5_ab_all_reports.md  v029_6_reveal_in_folder.md  v029_7_log_copy_download.md  v029_8_prune_job_registry.md  v029_9_serve_list_stop.md
docs/plan/commits/v03/: c20_json_output.md  c21_regression_gating.md  c22_isolated_stages.md  c23_dry_run.md  c24_verify.md  c25_diff.md  c26_export.md
docs/plan/commits/v04/: c27_engine_presets.md  c28_texture_usage_report.md  c29_overdraw_heatmap.md  c30_query_schema.md  c31_mesh_material_report.md
docs/plan/commits/v05/: c32_pipeline_state_adapter.md  c33_data_driven_columns.md  c34_vulkan_extraction.md  c35_schema_widening.md
docs/plan/reference/: AGGREGATION_FINDINGS.md  DESIGNER.md  FINDINGS.md  HARDCODE.md  QUALITY_GATES.md
tools/: shoot.py
(+161 files in other folders)
