[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "bobframes"
dynamic = ["version"]
description = "RenderDoc capture pipeline: ingest, analyze, render."
readme = "README.md"
requires-python = ">=3.10,<3.15"
license = { text = "MIT" }
authors = [{ name = "Siva Subramanyam", email = "sivasubramanyam@mayhem-studios.com" }]
keywords = ["renderdoc", "gpu", "profiling", "parquet"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "License :: OSI Approved :: MIT License",
  "Operating System :: Microsoft :: Windows",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Debuggers",
  "Topic :: Multimedia :: Graphics",
]
dependencies = [
  "pyarrow>=17,<22",
  # tomllib is stdlib only on 3.11+; the floor stays 3.10 because qrenderdoc embeds Python 3.10
  # (the replay stage runs there). tomli is the conditional backport for that cell (ADR-26).
  "tomli>=2.0; python_version<'3.11'",
]

[project.optional-dependencies]
dev = ["build", "twine", "hatchling", "pytest"]

[project.scripts]
bobframes = "bobframes.cli:main"

[project.urls]
Homepage  = "https://github.com/altpsyche/bobframes"
Issues    = "https://github.com/altpsyche/bobframes/issues"
Changelog = "https://github.com/altpsyche/bobframes/blob/main/CHANGELOG.md"

[tool.hatch.version]
path = "bobframes/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["bobframes"]

# replay_main.py is force-included so importlib.resources always resolves a real on-disk path
# (ARCHITECTURE §3). The bundled test fixtures are NOT force-included: the .gitignore negation
# (bobframes/tests/data/**) makes them tracked, so packages=["bobframes"] already ships them — a
# second force-include only produced duplicate zip entries. See DECISIONS ADR-10.
[tool.hatch.build.targets.wheel.force-include]
"bobframes/replay/replay_main.py" = "bobframes/replay/replay_main.py"

[tool.hatch.build.targets.sdist]
include = ["bobframes/", "README.md", "CHANGELOG.md", "LICENSE", "pyproject.toml"]
exclude = ["**/__pycache__", "**/*.pyc"]

[tool.pytest.ini_options]
markers = [
  # Byte-for-byte HTML golden comparisons. The rendered HTML embeds environment-dependent computed
  # bytes (float formatting differs across Python versions; parquet sizes across pyarrow writers), so
  # the snapshot is byte-identical ONLY on the canonical CI env (py3.12 / pyarrow 21; ADR-11, D-8).
  # CI runs `-m golden_env` on that one cell and `-m "not golden_env"` on every other cell.
  "golden_env: byte-identical HTML golden comparison; canonical-env-only (ADR-11).",
]
